# cyu-emails

./: Cargo.toml  flake.nix
src/: error.rs  main.rs
src/api/: mod.rs  soap.rs
src/imap/: client.rs  message.rs  mod.rs  server.rs
