[package]
name = "cyu-emails"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
const_format = "0.2.32"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
